refactor(userinfo): 优化DTO与实体转换及权限缓存处理
- 将账号状态由整数转换为字符串以兼容业务需求
- 扩展CompanyDept模块，添加更新相关DTO及Repository支持
- 在Service层统一使用DTO复制，简化更新逻辑
- 调整角色权限加载逻辑，修正日志及缓存key描述
- 优化历史任务查询，移除多余租户参数
- 新增流程委托权限相关查询与状态更新接口
- 新增流程跳转查询接口支持节点跳转获取
- 增加流程模板默认模板查询支持
- 统一用户登录历史记录管理，调整返回值及存储逻辑
- 菜单、岗位、语言等模块新增创建与更新DTO，调整创建与更新逻辑
- Role模块新增批量按ID查询接口，优化分页查询实现
- 采用BeanUtils复制简化Service实现，提升代码整洁性
- 修复权限权限缓存相关日志与变量命名，提升可读性及一致性